--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "npm": "6.11.3"
   },
   "dependencies": {
-    "eslint-plugin-react-hooks": "^1.7.0",
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
@@ -18,6 +17,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "express-cache-controller": "^1.1.0",
     "heroku-cli": "^7.0.9",
     "husky": "^3.0.7",
@@ -28,6 +28,7 @@
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "react": "^16.9.0",
+    "react-cookie": "^4.0.1",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
