--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pretty-quick": "^1.11.1",
     "react": "^16.9.0",
     "react-cookie": "^4.0.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
