--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
     "express-cache-controller": "^1.1.0",
+    "form-data": "^2.5.1",
     "heroku-cli": "^7.0.9",
     "husky": "^3.0.7",
     "lint-staged": "^9.4.0",
@@ -31,7 +32,10 @@
     "react-cookie": "^4.0.1",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.9.0",
+    "react-image": "^2.2.1",
+    "react-input-files": "^1.2.0",
     "react-redux": "^7.1.1",
+    "react-rounded-image": "^2.0.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
