--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lint-staged": "^9.4.0",
     "material": "^0.4.1",
     "material-ui": "^0.20.2",
+    "mdbreact": "^4.22.0",
     "nodemon": "^1.19.4",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
