--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "form-data": "^2.5.1",
     "heroku-cli": "^7.0.9",
     "husky": "^3.0.7",
+    "jquery": "^3.4.1",
     "lint-staged": "^9.4.0",
+    "lodash": "^4.17.15",
     "material": "^0.4.1",
     "material-ui": "^0.20.2",
     "mdbreact": "^4.22.0",
     "nodemon": "^1.19.4",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-cookie": "^4.0.1",
     "react-cookies": "^0.1.1",
@@ -42,6 +45,9 @@
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
+    "uws": "^10.148.1",
     "yarn": "^1.17.3",
     "yarn-install": "^1.0.0"
   },
